[metadata]
name = capcruncher_tools
version = 0.1.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Faster utilities to speed up CapCruncher
# long_description = file: README.md
# long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
# url = https://github.com/sims-lab/CapCruncher.git
classifiers = 
        Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        Operating System :: POSIX :: Linux
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Topic :: Scientific/Engineering :: Bio-Informatics


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires=
        click


